# http_server

./: README.md  main.py  pyproject.toml  requirements.txt
html/: catalog.html  category.html  contacts.html  index.html
